Some other basic test examples

--- a/demo1.html
+++ b/demo1.html
@@ -41,6 +41,9 @@
             </header>
             <section class="inner"> 
                 <h1>Testem Testing</h1>
+                <article data-plugin="domObject">
+                    <h1>DOM Object Test</h1>
+                </article>
             </section>
             <footer>
                 &copy; 2013
