--- a/demo1.html
+++ b/demo1.html
@@ -54,8 +54,10 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
         <script src="/js/Objects/TestObject.js"></script>
+        <script src="/js/Objects/TestDOMObject.js"></script>
 
         <!-- Tests -->
         <script src="/js/Objects/Tests/_TestObject.js"></script>        
+        <script src="/js/Objects/Tests/_TestDOMObject.js"></script>        
     </body>
 </html>
